Migrate to uv, add generate script, and ruff-format codebase
- Replace requirements.txt with pyproject.toml + uv.lock (uv package management)
- Add generate.py and shells/generate.sh for inference/generation
- Add shells/machine_config.sh.example for portable environment setup
- Add CLAUDE.md with project conventions and .claude/settings.json
- Ruff-format all Python files for consistent style
- Update .gitignore for uv, ruff, and machine-specific config

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,28 @@
-models/*
-datasets/
-outputs*/
+# Machine-specific config
+shells/machine_config.sh
 
-*.pyc
-*.out
+# Local files
 *.core
-inductor_cache/
-huginn_llama/
+*.out
 convert_pretrained_model/models/
+datasets/
+huginn_llama/
+inductor_cache/
+models/*
+outputs*/
+slurm_logs/
+
+# Python
+*$py.class
+*.py[cod]
+*.pyc
+__pycache__/
+
+# Ruff
+.ruff_cache/
+
+# UV
+.venv/
+
+# W&B
+wandb/
