--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "torch==2.9.0",
     "torchdata>=0.11.0",
+    "tqdm>=4.67.3",
     "transformers==4.51.0",
 ]
 
@@ -48,6 +49,8 @@ ignore = [
     "E501",  # line too long (handled by formatter)
     "B008",  # do not perform function calls in argument defaults
     "B905",  # zip without explicit strict parameter
+    "C408",  # unnecessary dict/list call (allow dict() and list())
+    "E731",  # allow lambda assignments
 ]
 
 [tool.ruff.lint.per-file-ignores]
