Add dataset download/preprocess pipeline and improve code quality
- Fix download_ds.py: was broken (args not stored), now supports multiple
  datasets via --datasets flag (nemotron-math, sft-*, fineweb-edu)
- Add shells/preprocess/download_ds_cpu.sh and preprocess_data_packing_cpu.sh
  for the full nemotron-math → tokenize → pack → parquet pipeline
- Fix preprocess_data_packing.py: remove spurious dataset_config arg passed
  to load_from_disk, add docstrings and type hints, clean up output path
- Fix cd ~/... in shell scripts that broke under SLURM (convert_olmo.sh,
  download_ds_cpu.sh, preprocess_data_packing_cpu.sh)
- Add trl as explicit dependency

Made-with: Cursor

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Machine-specific config
-shells/machine_config.sh
+shells/_machine_config.sh
 
 # Local files
 *.core
@@ -10,7 +10,7 @@ huginn_llama/
 inductor_cache/
 models/*
 outputs*/
-slurm_logs/
+logs/
 knowledge/
 
 # Python
