--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "torchdata>=0.11.0",
     "tqdm>=4.67.3",
     "transformers==4.51.0",
+    "trl>=0.19.1",
 ]
 
 [dependency-groups]
