--- a/shells/_machine_config.sh.example
+++ b/shells/_machine_config.sh.example
@@ -1,6 +1,6 @@
 # Machine-specific configuration template
-# Copy this file to machine_config.sh and fill in your paths
-# machine_config.sh is gitignored — never commit it
+# Copy this file to _machine_config.sh and fill in your paths
+# _machine_config.sh is gitignored — never commit it
 
 # ============================================================================
 # Directory Configuration
@@ -10,9 +10,7 @@ BASE_DIR="/path/to/your/base/directory"
 # HuggingFace cache (models, tokenizers, datasets)
 export HF_HOME="$BASE_DIR/.cache/huggingface"
 export HF_DATASETS_CACHE="$HF_HOME/datasets"
-
-# Local model storage (corresponds to models/ in the repo, gitignored)
-export MODELS_DIR="$BASE_DIR/models"
+export UV_CACHE_DIR="/vol/miltank/users/swek/.cache/uv"
 
 # Preprocessed/packed parquet datasets (used in shells/*.sh via $PROCESSED_DATA_PATH)
 export PROCESSED_DATA_PATH="$BASE_DIR/processed_datasets"
@@ -24,7 +22,10 @@ export PROCESSED_DATA_PATH="$BASE_DIR/processed_datasets"
 # GPU jobs (training, evaluation)
 export SLURM_PARTITION_GPU="your-gpu-partition"
 export SLURM_QOS_GPU="your-gpu-qos"
+export SLURM_ACCOUNT=""                        # Optional: SLURM account (e.g., "eagle"), leave empty if not required
 export NUM_GPUS="${NUM_GPUS:-2}"               # Number of GPUs per job (overridable via env)
+export SLURM_GPU_TYPE="${SLURM_GPU_TYPE:-}"    # Optional: GPU type constraint (e.g., "h100", "a100"), leave empty for any GPU
+export SLURM_GPU_MEM="${SLURM_GPU_MEM:-}"      # Optional: GPU memory per GPU (e.g., "20G"), leave empty if not supported
 export SLURM_MEM_GPU="64G"
 export SLURM_MAIL_USER="your.email@example.com"
 
@@ -38,7 +39,7 @@ export SLURM_MEM_CPU="32G"
 # ============================================================================
 
 validate_config() {
-    local required_vars=(HF_HOME HF_DATASETS_CACHE MODELS_DIR PROCESSED_DATA_PATH)
+    local required_vars=(HF_HOME HF_DATASETS_CACHE PROCESSED_DATA_PATH)
     for var in "${required_vars[@]}"; do
         if [ -z "${!var:-}" ]; then
             echo "ERROR: $var not set in machine_config.sh" >&2
